@@ -132,6 +132,8 @@
   *) [TS-1749] Stats cluster values among nodes are not consistent.
    Author: Yunkai Zhang <qiushu.zyk@taobao.com>
 
+  *) [TS-1761] Improve scheduling and configuration around HostDB disk sync.
+
   *) [TS-1758] Remove unused overviewPage aggregation functions.
    Author: Yunkai Zhang.
 
